# marktab-c

./: .gitignore  .gitmodules  .rcomp  .travis.yml  CONTRIBUTING.md  Doxyfile  Gemfile  LICENSE  LISCENSE  Makefile  README.md  Rakefile  auto-build-env  build-env.rb  configure.ac  grammar.md
docs/: grammar.md
examples/: .gitignore  Makefile  cli.c
examples/tabs/: said_the_people.mt  test.mt
include/: marktab.h
lib/: .gitignore
rcomp/tests/chords/inline/: chords1.mt  chords2.mt  chords3.mt
rcomp/tests/notes/: notes1.mt
rcomp/tests/notes/modifiers/: note_modifiers1.mt
spec/check/: .gitignore  Makefile  check_mt_hash.c  check_mt_queue.c  check_mt_tree.c
spec/clar/: Makefile  clar_test.h  hash.c  main.c
spec/rcomp/expected/chords/: chords1.out  chords2.out  chords3.out  chords4.out  chords5.out
spec/rcomp/expected/notes/: notes1.out  notes10.out  notes2.out  notes3.out  notes4.out  notes5.out  notes6.out  notes7.out  notes8.out  notes9.out
spec/rcomp/expected/symbols/: symbols1.out  symbols2.out  symbols3.out
spec/rcomp/tests/notes/: notes1.mt  (+9 more)
src/: Makefile.am  lex.yy.l  marktab.c  marktab.h  marktab.l  marktab.y  mt.c  mt.h  mt_alloc.h  mt_buffer.c  mt_buffer.h  mt_chord.c  mt_chord.h  mt_conf.c  mt_conf.h  mt_config.c  mt_config.h  mt_error.c  mt_error.h  mt_hash.c  mt_hash.h  mt_math.h  mt_modifier.h  mt_note.c  mt_note.h  mt_object.c  mt_object.h  mt_output.c  mt_output.h  mt_pair.c  mt_pair.h  mt_parse_helper.h  mt_queue.c  mt_queue.h  mt_scope.c  mt_scope.h  mt_sequence.c  mt_sequence.h  mt_stack.c  mt_stack.h  (+14 more)
src/tests/: test.mt  test2.mt
(+25 files in other folders)
